# slurm-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.sh
.claude/skills/slurm/: SKILL.md
.claude/skills/slurm/evals/: phase1_cases.md
.claude/skills/slurm/references/: partition_selection.md  resource_profiles.md  script_templates.md
docs/: competitive_landscape_20260304.md  devlog.md  error_code_interpreter_design_20260410.md  job_resource_profiles.md  slurm_native_error_codes_20260409.md  slurm_skill_design_20260303.md
src/slurm_mcp/: __init__.py  server.py  slurm_cli.py
tests/: test_slurm_mcp.py
