[project]
name = "slurm-mcp"
version = "0.1.0"
description = "MCP Server for SLURM job submission, monitoring, and management"
readme = "README.md"
authors = [
    { name = "Samuel Ahuno", email = "ekwame001@gmail.com" }
]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.1.0",
]

[project.scripts]
slurm-mcp = "slurm_mcp.server:main"

[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
